test/libsolidity/syntaxTests/parsing/single_event_arg_trailing_comma.sol
contract test {
	event Test(uint a,);
	function(uint a) {}
}
// ----
// ParserError: (34-35): Unexpected trailing comma in parameter list.
